# ALVR

./: alvr.nix  flake.nix
alvr/client_core/resources/: lobby_line.wgsl
alvr/client_core/src/: c_api.rs  connection.rs  lib.rs
alvr/client_core/src/graphics/: lobby.rs
alvr/client_openxr/src/: interaction.rs  lobby.rs  stream.rs
alvr/server/: Cargo.toml
alvr/server/src/: connection.rs  lib.rs  logging_backend.rs  web_server.rs
