[package]
name = "alvr_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["alvr-org", "Valve Corporation"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
gpl = [] # Enable for FFmpeg support on Windows. Always enabled on Linux

[dependencies]
alvr_audio.workspace = true
alvr_common.workspace = true
alvr_events.workspace = true
alvr_filesystem.workspace = true
alvr_packets.workspace = true
alvr_server_io.workspace = true
alvr_session.workspace = true
alvr_sockets.workspace = true

# Serialization
bincode = "1"
bus = "2"
chrono = "0.4"
fern = "0.6"
rosc = "0.10"
rouille = "3"
serde = "1"
serde_json = "1"
sysinfo = { version = "0.29", default-features = false }

[build-dependencies]
alvr_filesystem = { path = "../filesystem" }
bindgen = "0.66"
cc = { version = "1", features = ["parallel"] }
walkdir = "2"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"
